# datastruct

./: CMakeLists.txt  main.c
linerList/: Introduction.txt  LinerList.h  SequenceList.c  SingleLinkList.c
menu/: LineListMenu.c  MainMenu.c  Menu.h
menu/LineList/: LineListMenu.c  SeqListMenu.c
tools/: ReadFile.c  Tools.h
